--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,14 +3,14 @@
 <div class="container">
     <div class="row">
         <div class="card p-4 mx-auto">
-            <a href="/add-product" class="btn btn-primary btn-block btn-lg">
+            <!-- <a href="/add-product" class="btn btn-primary btn-block btn-lg">
                 Agregar Producto
-            </a>
-            <a href="/products/1" class="btn btn-primary btn-block btn-lg">
-                Ver productos
+            </a> -->
+            <a href="/snomed/x" class="btn btn-primary btn-block btn-lg">
+                Ver término de ejemplo
             </a>
             <a href="/snomed/" class="btn btn-primary btn-block btn-lg">
-                Snomed
+                Buscar términos
             </a>
         </div>
     </div>
