correguido errores al cambiar de rutas

--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -26,7 +26,7 @@
               <a class="nav-link" href="/snomed/banana">Ver términos ejemplo</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/snomed">Buscar término</a>
+              <a class="nav-link" href="/snomed/">Buscar término</a>
             </li>
           </ul>
         </div>
