--- a/src/views/partials/term.ejs
+++ b/src/views/partials/term.ejs
@@ -7,7 +7,7 @@
         var term = $('#term').val()
         console.log(' dio click en buscar termino el valor es' + term);
         var pathname = window.location.pathname;
-        window.location.replace(pathname + '/' + term);
+        window.location.replace(pathname + term);
 
     });
 });
