Agregado para buscar varios terminos

--- a/src/views/snomed/term.ejs
+++ b/src/views/snomed/term.ejs
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row p-5">
 
-        <!-- pruductos -->
+        <!-- términos -->
         <% for(var i = 0; i < itemsTerm.length; i++) { %>
             <div class="col-md-4">
                 <div class="p-4">
