--- a/src/views/snomed/busca-term.ejs
+++ b/src/views/snomed/busca-term.ejs
@@ -9,7 +9,7 @@
                         <form action="/add-product" 2 action="" class="form-term">
                             <div class="form-group">
                                 <label for="term">Nombre de término</label>
-                                <input type="text" class="form-control" name="term" id="term" placeholder="e.j: banana">
+                                <input type="text" class="form-control" name="term" id="term" placeholder="e.j: septica o 5681000146105">
                             </div>
                             <button type="submit" class="btn btn-primary" id="busca-term">Buscar</button>
                         </form>
